# OAPIFServerless

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post_create.sh
.github/workflows/: ci.yml
deploy/: __init__.py  app.py  config.py
deploy/stacks/: __init__.py  api.py  auth.py  data.py
plugin/: TODO.md  __init__.py  auth.py  client.py  config.py  metadata.txt  mypy.ini  plugin.py  pytest.ini
plugin/scripts/: check.sh  startup.py
plugin/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_smoke.py
scripts/: acceptance-setup.sh  acceptance-teardown.sh  check-backend.sh  check-plugin.sh  check.sh  cite.sh  deploy.sh  pre-commit  qgis-interactive.sh  qgis-test-setup.sh  qgis-test-teardown.sh  qgis-test.sh
src/oapif/: __init__.py  config.py  schema.py
src/oapif/auth/: __init__.py
src/oapif/dal/: __init__.py  collections.py  exceptions.py  features.py  pagination.py
src/oapif/handlers/: __init__.py  main.py  responses.py  routes.py
src/oapif/models/: __init__.py  collection.py  feature.py
tests/: CITE.md  TODO.md  __init__.py  conftest.py
tests/acceptance/: __init__.py  conftest.py  test_access_control.py  test_auth.py  test_collections.py  test_crud.py  test_field_auth.py  test_filtering.py  test_options_errors.py  test_pagination.py  test_read_endpoints.py  test_schema.py
tests/integration/: __init__.py  test_collections_integration.py  test_crud_integration.py  test_dal_integration.py  test_handlers_integration.py
tests/schemas/: __init__.py
tests/unit/: test_auth.py  test_collections.py  test_conformance.py  test_dal.py  test_field_level_auth.py  test_handlers.py  test_row_level_access.py  test_schema.py  test_smoke.py
